# bina-land-backend

./: .gitignore  README.md  bina_land_dev.sql  database.json  mlp_model.h5  model.ipynb  pyproject.toml  test_model.ipynb
app/: __init__.py
app/extensions/: db.py  marshmallow.py
app/models/: Property.py  Role.py  User.py  WishList.py
app/routes/: auth.py  property.py
