[tool.poetry]
name = "BinaLand"
version = "1.0.0"
description = "RestFul Api"
authors = ["Haziq Musa <haziq.musa02@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
flask = "3.0.3"
Flask-SQLAlchemy = "3.1.1"
mysqlclient = "2.2.4"
flask-bcrypt = "1.0.1"
flask-jwt-extended = "4.6.0"
flask-cors = "4.0.1"
flask-marshmallow = "1.2.1"
marshmallow-sqlalchemy = "1.1.0"
tensorflow = "2.17.0"
scikit-learn = "1.5.2"
numpy = "1.26.4"